arreglé los gatos

--- a/cat1.html
+++ b/cat1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <center><h1>Mili</h1></center>
-    <img src="imgs/cat1.png" alt="NotFound" width="500">
+    <img src="imgs/cat1.png" alt="NotFound" width="500"><br>
     
     Nombre: Mili<br>
     Edad: 1 año<br>
