--- a/cat2.html
+++ b/cat2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <center><h1>Nala</h1></center>
-    <img src="imgs/cat2.png" alt="NotFound" width="500">
+    <img src="imgs/cat2.png" alt="NotFound" width="500"><br>
     
     Nombre: Nala<br>
     Edad: 7 meses<br>
