--- a/cat3.html
+++ b/cat3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <center><h1>Tisa</h1></center>
-    <img src="imgs/cat3.png" alt="NotFound" width="500">
+    <img src="imgs/cat3.png" alt="NotFound" width="500"><br>
     
     Nombre: Tisa<br>
     Edad: 5 meses<br>
