--- a/mainperro.html
+++ b/mainperro.html
@@ -12,13 +12,15 @@
 <body>
     <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet impedit iusto aliquid inventore, ea est aliquam cupiditate ab accusamus nesciunt ipsum vel earum accusantium blanditiis. Molestiae blanditiis voluptate accusantium libero!</p>
     <h2>Estos Perros buscan familia</h2>
-    <img src="Perross/perrito1.jpg" alt="" width="300">
     <a href="perro1.html">Yorki</a>
-    <img src="Perross/perrito2.jpg" alt=""  width="300" > 
+    <img src="Perross/perrito1.jpg" alt="" width="300"> <br>
     <a href="perro2.html">Rottweiler</a>
-    <img src="Perross/perrito3.jpg" alt=""  width="300" >
+    <img src="Perross/perrito2.jpg" alt=""  width="300" > <br>
     <a href="perro3.html">Poodle </a> 
+    <img src="Perross/perrito3.jpg" alt=""  width="300" ><br>
+   
     
+    <a href="main.html" > Volver al inicio</a>
 
 </body>
 
